--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,60 @@
-# Logs
-logs
+# ==================== Node.js / Backend ====================
+node_modules/
+dist/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+.env
+.env.local
+.env.*.local
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# ==================== Android / Gradle ====================
+*.iml
+.gradle/
+/local.properties
+/.idea/caches
+/.idea/libraries
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
 .DS_Store
+/build/
+/app/build/
+/captures
+.externalNativeBuild
+.cxx
+*.apk
+*.ap_
+*.aab
+
+# ==================== Kotlin / Java ====================
+*.class
+*.jar
+*.war
+*.aar
+*.ear
+
+# ==================== IDE ====================
+.idea/
+.vscode/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# ==================== OS ====================
+.DS_Store
+Thumbs.db
+*.local
+
+# ==================== Testing ====================
+/coverage/
+*.lcov
+
+# ==================== Misc ====================
+*.bak
+*.tmp
+*.temp
+*.cache
