--- a/sakura-backend/.env
+++ b/sakura-backend/.env
@@ -4,3 +4,7 @@ JWT_SECRET=sakura_jwt_secret_key_2024
 JWT_REFRESH_SECRET=sakura_refresh_secret_key_2024
 JWT_EXPIRES_IN=15m
 JWT_REFRESH_EXPIRES_IN=7d
+GOOGLE_CLIENT_ID=27956848724-htu7kge35non4bilsl2j59sd6vb1k0qt.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASS=your-app-password
