--- a/sakura-backend/.env
+++ b/sakura-backend/.env
@@ -8,3 +8,6 @@ GOOGLE_CLIENT_ID=27956848724-htu7kge35non4bilsl2j59sd6vb1k0qt.apps.googleusercon
 GOOGLE_CLIENT_SECRET=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
 EMAIL_USER=your-email@gmail.com
 EMAIL_PASS=your-app-password
+
+EMAIL_USER=xuandatthpthr@gmail.com
+EMAIL_PASS=dzaqigiybiwfsnqt
